--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "prettier": "^3.5.3"
   },
   "devDependencies": {
     "prisma": "^6.5.0"
